# simplest_conan

./: .gitignore  CMakeLists.txt  README.md  conanfile.py
include/: simplest_conan.h
src/: main.cpp  simplest_conan.cpp  simplest_conan.h
